profile & profile image update

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -23,6 +23,9 @@ spring:
             client-id: ${GITHUB_CLIENT_ID}
             client-secret: ${GITHUB_CLIENT_SECRET}
 
+file:
+  upload-dir: C:/twitter_clone_images/
+
 jwt:
   secret: ${JWT_SECRET}
   expiration: 86400000
